# itheumcore-evm

./: .env-template  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
.github/workflows/: ci-test.yaml
contracts/: Claims.sol  ClaimsReleaseV2.sol  DataCoalitionsDAO.sol  DataDexReleaseV2.sol  DataDexV01.sol  DataNFTReleaseV2.sol  FoundationDAO.sol  ItheumDataNFTV01.sol  ItheumToken.sol  ItheumTokenMatic.sol  ItheumTokenMultiChainGeneric.sol  README.md  SharedStructs.sol  TokenMyda.sol  TokenMyda_Matic.sol  dataDex.sol  dataNFT.sol  dataNFT.sol.tmp  dataNFT_Matic.sol  dataNFT_Matic.sol.tmp  dataPack.sol  mydaERC20.sol  mydaERC20_Matic.sol.tmp
elrond-contracts/claims/: Cargo.toml
elrond-contracts/claims/mandos/: empty.scen.json
elrond-contracts/claims/meta/: Cargo.toml
elrond-contracts/claims/meta/src/: main.rs
elrond-contracts/claims/src/: events.rs  lib.rs  storage.rs  views.rs
elrond-contracts/claims/tests/: empty_mandos_go_test.rs  empty_mandos_rs_test.rs  empty_rust_test.rs
elrond-contracts/claims/wasm/: Cargo.toml
elrond-contracts/claims/wasm/src/: lib.rs
samples/: ChainLinkDemo.sol  HomeLoanLender.sol
scripts/: itheumcore-script-v2.js  itheumcore-script.js
test/: ItheumTokenMultiChainGeneric-test.js  claims-test.js  data-dex-release-v2-test.js  data-dex-test.js  data-dex_v01-test.js  dataCoalitionsDAO-test.js  dataDex-test.js  dataNFT-release-v2-test.js  dataNFT-test.js  dataNFT_v01-test.js  dataPack-test.js  itheumToken-test.js  itheumcore-test.js  sample-test.txt
