[package]
name = "claims-wasm"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "you",]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.claims]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.31.1"

[dependencies.elrond-wasm-output]
version = "0.31.1"
features = [ "wasm-output-mode",]
